Fixed nav gap

--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ summary {
 	display: grid;
 	grid-template-rows: repeat(6, 1fr);
 	grid-template-columns: 70px 1fr;
-	gap: 15px;
+	gap: 15px 0px ;
 	grid-row: 3 / 4;
 	grid-column: 1 / -1;
 }
